
Emulation:
- GEMDOS HD:
  - Fix: Disable GEMDOS opcodes after GEMDOS drive is disabled
- Video:
  - fix reading video counter $FF8205/07/09 after modifying it while
    display is ON.
  - fix location of the video counter's restart when screen runs at 60 Hz
  - TT: sync ST & TT color registers immediately on write
  - Falcon: handle byte access special case for ST color registers
- Fixes to DSP addressing

Emulator:
- SDL GUI:
  - Shortcuts can be configured in the keyboard dialog
  - User can provide volume label when creating a floppy image
- Better SDL2 support (e.g. resizable windows), SDL2 is now enabled by default
- Preferred private configuration directory is now ~/.config/hatari (but the
  legacy location ~/.hatari is still used if the other one does not exist yet)
- Support SDL key names in keymap files in addition to key codes
- Support for rendering to 8-bit host screens removed
- NatFeats SCSI driver for Linux added
- Debugger:
  - Fix: close debugger log file only when explicitly requested,
         not when continuing emulation from debugger
  - Fix: direct DSP register, disasm and memdumps to debugger log
         file, similarly to CPU
  - Fix: direct CPU and DSP symbol traces to trace file, not stderr
  - Fix: :once option when there's only one breakpoint (v1.9 regression)

Other:
- Allow building without Zlib

Fixed demos:
- spec512 image in the Intro of the Place To Be Again (video, restart counter)
- Menu screen in the Place To Be Again (video, writing/reading video
  counter during active display)


 Version 1.9.0 (2015-09-10):
 ---------------------------

Emulation:
- STE Joypads:
  - Fix: Joypad A Option button
  - Fix: Joypad B extended buttons
- ACSI / IDE:
  - Fix: image file attribute check when using device files
  - Fix: v1.8 ACSI regression with A1=0 case
- GEMDOS HD:
  - Fix: matching exactly 8 chars long file names containing '.'
  - Better mapping of host errors to GEMDOS error codes